FR Typo fix for search garbage button name

--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -1971,7 +1971,7 @@
       </notes>
       <segment>
         <source>Müll durchwühlen</source>
-        <target>Fouiller les poubelles</target>
+        <target>Fouiller les déchets</target>
       </segment>
     </unit>
     <unit id="s5pZm5S" name="Wenn du einen Gegenstand aufnimmst oder ablegst, verlierst du deine Tarnung!">
