--- a/translations/global.en.xlf
+++ b/translations/global.en.xlf
@@ -601,7 +601,7 @@
       </notes>
       <segment>
         <source>Ohne diese kannst du keine externen Apps nutzen. Um eine Externe ID zu setzen, gehe in deine Seele &gt; Einstellungen und generiere eine ID.</source>
-        <target><![CDATA[Without these, you cannot use external apps. To set an external ID, go into your Soul > Settings and generate an ID.]]></target>
+        <target><![CDATA[Without these, <strong>you cannot use external apps</strong>. To set an external ID, go into your Soul > Settings and generate an ID.]]></target>
       </segment>
     </unit>
     <unit id="SddpDzy" name="Verzeichnis">
