--- a/translations/global.es.xlf
+++ b/translations/global.es.xlf
@@ -601,7 +601,7 @@
       </notes>
       <segment>
         <source>Ohne diese kannst du keine externen Apps nutzen. Um eine Externe ID zu setzen, gehe in deine Seele &gt; Einstellungen und generiere eine ID.</source>
-        <target><![CDATA[Sin esto no puedes usar aplicaciones externas. Para configurar un ID externo, ve a Tu alma > Configuración y genera un ID.]]></target>
+        <target><![CDATA[Sin esto <strong>no puedes usar aplicaciones externas</strong>. Para configurar un ID externo, ve a Tu alma > Configuración y genera un ID.]]></target>
       </segment>
     </unit>
     <unit id="SddpDzy" name="Verzeichnis">
