--- a/translations/items.es.xlf
+++ b/translations/items.es.xlf
@@ -8369,5 +8369,68 @@
         <target><![CDATA[Du hast {target} mit {item} kombiniert und {target} erzeugt.{hr}Achtung: Du hast {target} vergiftet. Es ist <strong>nahezu unmöglich, es vom Original zu unterscheiden</strong>, sei also vorsichtig... Es liegt ganz an dir, was du damit jetzt tun möchtest.]]></target>
       </segment>
     </unit>
+    <unit id="i.fN8wb" name="Zeuge der großen Verseuchung">
+      <notes>
+        <note category="german">Zeuge der großen Verseuchung</note>
+      </notes>
+      <segment>
+        <source>Zeuge der großen Verseuchung</source>
+        <target>Testigo de la Gran Contaminación</target>
+      </segment>
+    </unit>
+    <unit id="_4bq2jQ">
+      <notes>
+        <note category="german">Als Opfer der Großen Seuche hast du durch dein gestähltes Immunsystem eine Chance, Infektionen abzuwehren.</note>
+      </notes>
+      <segment>
+        <source>Als Opfer der Großen Seuche hast du durch dein gestähltes Immunsystem eine Chance, Infektionen abzuwehren.</source>
+        <target>Als Opfer der Großen Seuche hast du durch dein gestähltes Immunsystem eine Chance, Infektionen abzuwehren.</target>
+      </segment>
+    </unit>
+    <unit id="EOq8v7z" name="Zeuge des Armageddon">
+      <notes>
+        <note category="german">Zeuge des Armageddon</note>
+      </notes>
+      <segment>
+        <source>Zeuge des Armageddon</source>
+        <target>Testigo de Armagedón</target>
+      </segment>
+    </unit>
+    <unit id="N_DpPbR" name="Als Zeuge des Armagedon kannst du selbst aus ausweglosen Situationen fliehen.">
+      <notes>
+        <note category="german">Als Zeuge des Armagedon kannst du selbst aus ausweglosen Situationen fliehen.</note>
+      </notes>
+      <segment>
+        <source>Als Zeuge des Armagedon kannst du selbst aus ausweglosen Situationen fliehen.</source>
+        <target>Als Zeuge des Armagedon kannst du selbst aus ausweglosen Situationen fliehen.</target>
+      </segment>
+    </unit>
+    <unit id="Fxoqglo" name="Ruhm">
+      <notes>
+        <note category="german">Ruhm</note>
+      </notes>
+      <segment>
+        <source>Ruhm</source>
+        <target>Ruhm</target>
+      </segment>
+    </unit>
+    <unit id="FQo0T3F">
+      <notes>
+        <note category="german">Als Champion kannst du deinen Nachrichten im Forum zusätzliche Authorität verleihen.</note>
+      </notes>
+      <segment>
+        <source>Als Champion kannst du deinen Nachrichten im Forum zusätzliche Authorität verleihen.</source>
+        <target>Als Champion kannst du deinen Nachrichten im Forum zusätzliche Authorität verleihen.</target>
+      </segment>
+    </unit>
+    <unit id="VDcKkt9" name="Kreischender Wecker">
+      <notes>
+        <note category="german">Kreischender Wecker</note>
+      </notes>
+      <segment>
+        <source>Kreischender Wecker</source>
+        <target>Despertador chillón</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
