Admin config for new feature unlock system Display unlocked features in Soul Lock glory tag

--- a/translations/admin.de.xlf
+++ b/translations/admin.de.xlf
@@ -2091,11 +2091,11 @@
     </unit>
     <unit id="GYf8Lr5" name="Eine Auszeichnungen auswählen:">
       <notes>
-        <note category="german">Eine Auszeichnungen auswählen:</note>
+        <note category="german">Eine Auszeichnung auswählen:</note>
       </notes>
       <segment>
         <source>Eine Auszeichnungen auswählen:</source>
-        <target>Eine Auszeichnungen auswählen:</target>
+        <target>Eine Auszeichnung auswählen:</target>
       </segment>
     </unit>
     <unit id="tAQPtd4" name="Einen Status auswählen:">
@@ -3410,6 +3410,15 @@
       <segment>
         <source>Löschen (ermöglicht erneutes Betreten der Ruine)</source>
         <target>Löschen (ermöglicht erneutes Betreten der Ruine)</target>
+      </segment>
+    </unit>
+    <unit id="b7SFlpH" name="Feature freigeben:">
+      <notes>
+        <note category="german">Feature freigeben:</note>
+      </notes>
+      <segment>
+        <source>Feature freigeben:</source>
+        <target>Feature freigeben:</target>
       </segment>
     </unit>
   </file>
