--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -8302,7 +8302,7 @@
     </unit>
     <unit id="N_DpPbR" name="Als Zeuge des Armagedon kannst du selbst aus ausweglosen Situationen fliehen.">
       <notes>
-        <note category="german">Als Zeuge des Armagedon kannst du selbst aus ausweglosen Situationen fliehen.</note>
+        <note category="german">Als Zeuge des Armageddon kannst du selbst aus ausweglosen Situationen fliehen.</note>
       </notes>
       <segment>
         <source>Als Zeuge des Armagedon kannst du selbst aus ausweglosen Situationen fliehen.</source>
