--- a/translations/game.de.xlf
+++ b/translations/game.de.xlf
@@ -19600,5 +19600,59 @@
         <target><![CDATA[Du bist gerade dabei in dieser Zone zu graben. Wenn du bis zum Ende der angezeigten Zeit am gleichen Platz bleibst, <strong>hast du die Möglichkeit einen weiteren Gegenstand zu finden</strong>!<br /><br />Du kannst so lange bleiben wie du möchtest.]]></target>
       </segment>
     </unit>
+    <unit id="Clom3hI" name="Spiritueller Rucksack">
+      <notes>
+        <note category="german">Spiritueller Rucksack</note>
+      </notes>
+      <segment>
+        <source>Spiritueller Rucksack</source>
+        <target>Spiritueller Rucksack</target>
+      </segment>
+    </unit>
+    <unit id="sUNCUak" name="Freigeschaltet:">
+      <notes>
+        <note category="german">Freigeschaltet:</note>
+      </notes>
+      <segment>
+        <source>Freigeschaltet:</source>
+        <target>Freigeschaltet:</target>
+      </segment>
+    </unit>
+    <unit id="RuyZ5lt" name="Dauerhaft!">
+      <notes>
+        <note category="german">Dauerhaft!</note>
+      </notes>
+      <segment>
+        <source>Dauerhaft!</source>
+        <target>Dauerhaft!</target>
+      </segment>
+    </unit>
+    <unit id="hGatz34" name="Für diese Saison">
+      <notes>
+        <note category="german">Für diese Saison</note>
+      </notes>
+      <segment>
+        <source>Für diese Saison</source>
+        <target>Für diese Saison</target>
+      </segment>
+    </unit>
+    <unit id="GVd6OlM" name="Bis %date%">
+      <notes>
+        <note category="german">Bis %date%</note>
+      </notes>
+      <segment>
+        <source>Bis %date%</source>
+        <target>Bis %date%</target>
+      </segment>
+    </unit>
+    <unit id="y.hXICd" name="Für %num% weitere Städte">
+      <notes>
+        <note category="german">Für %num% weitere Städte</note>
+      </notes>
+      <segment>
+        <source>Für %num% weitere Städte</source>
+        <target>Für %num% weitere Städte</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
