--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -19563,5 +19563,59 @@
         <target><![CDATA[Estás escarbando la zona. ¡Si te quedas aquí hasta que termine el tiempo indicado, <strong>tal vez obtengas un objeto</strong>!<br /><br />Puedes quedarte todo el tiempo que quieras.]]></target>
       </segment>
     </unit>
+    <unit id="Clom3hI" name="Spiritueller Rucksack">
+      <notes>
+        <note category="german">Spiritueller Rucksack</note>
+      </notes>
+      <segment>
+        <source>Spiritueller Rucksack</source>
+        <target>Spiritueller Rucksack</target>
+      </segment>
+    </unit>
+    <unit id="sUNCUak" name="Freigeschaltet:">
+      <notes>
+        <note category="german">Freigeschaltet:</note>
+      </notes>
+      <segment>
+        <source>Freigeschaltet:</source>
+        <target>Freigeschaltet:</target>
+      </segment>
+    </unit>
+    <unit id="RuyZ5lt" name="Dauerhaft!">
+      <notes>
+        <note category="german">Dauerhaft!</note>
+      </notes>
+      <segment>
+        <source>Dauerhaft!</source>
+        <target>Dauerhaft!</target>
+      </segment>
+    </unit>
+    <unit id="hGatz34" name="Für diese Saison">
+      <notes>
+        <note category="german">Für diese Saison</note>
+      </notes>
+      <segment>
+        <source>Für diese Saison</source>
+        <target>Für diese Saison</target>
+      </segment>
+    </unit>
+    <unit id="GVd6OlM" name="Bis %date%">
+      <notes>
+        <note category="german">Bis %date%</note>
+      </notes>
+      <segment>
+        <source>Bis %date%</source>
+        <target>Bis %date%</target>
+      </segment>
+    </unit>
+    <unit id="y.hXICd" name="Für %num% weitere Städte">
+      <notes>
+        <note category="german">Für %num% weitere Städte</note>
+      </notes>
+      <segment>
+        <source>Für %num% weitere Städte</source>
+        <target>Für %num% weitere Städte</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
