--- a/translations/items.en.xlf
+++ b/translations/items.en.xlf
@@ -8383,7 +8383,7 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
     </unit>
     <unit id="N_DpPbR" name="Als Zeuge des Armagedon kannst du selbst aus ausweglosen Situationen fliehen.">
       <notes>
-        <note category="german">Als Zeuge des Armagedon kannst du selbst aus ausweglosen Situationen fliehen.</note>
+        <note category="german">Als Zeuge des Armageddon kannst du selbst aus ausweglosen Situationen fliehen.</note>
       </notes>
       <segment>
         <source>Als Zeuge des Armagedon kannst du selbst aus ausweglosen Situationen fliehen.</source>
