FR Translation for last admin stuff

--- a/translations/admin.fr.xlf
+++ b/translations/admin.fr.xlf
@@ -3418,7 +3418,7 @@
       </notes>
       <segment>
         <source>Feature freigeben:</source>
-        <target>Feature freigeben:</target>
+        <target>Débloquer une fonctionnalité :</target>
       </segment>
     </unit>
   </file>
