--- a/translations/admin.en.xlf
+++ b/translations/admin.en.xlf
@@ -3400,7 +3400,7 @@
       </notes>
       <segment>
         <source>Feature freigeben:</source>
-        <target>Feature freigeben:</target>
+        <target>Unlock Feature:</target>
       </segment>
     </unit>
   </file>
